--- a/index.html
+++ b/index.html
@@ -72,14 +72,12 @@
                             <li>Assault Weapon<button class="remove-button"></button></li>
                         </ul>
                     </li>
-                    <li class="group">
+                    <li>
                         <div id="choice"></div>
                         <div class="connector"></div>
                         <button class="ungroup-button"></button>
                         <ul class="subitems-list">
                             <li>Chinese Government<button class="remove-button"></button></li>
-                            <li>Hackers<button class="remove-button"></button></li>
-                            <li>Gun Buyback<button class="remove-button"></button></li>
                         </ul>
                     </li>
                     <li>
@@ -172,8 +170,8 @@
                     </li>
                 </ul>
                 <div id="entities-controls">
-                    <button id="group-button"><div id="group-count">0</div></button>
-                    <button id="confirm-button"></button>
+                    <button id="group-button" title="Group Selected Entities"><div id="group-count">0</div></button>
+                    <button id="cancel-button"></button>
                 </div>
             </div>
 
