--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div id="entities-column" class="column">
                 <div class="head">
-                    <div class="title">Entities</div><button class="sort-button"></button>
+                    <div class="title">Keywords</div><button class="sort-button"></button>
                     <div class="counter"><span>0</span> items</div>
                 </div>
                 <form>
