--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
 
             <div id="entities-column" class="column">
                 <div class="head">
-                    <div class="title">Keywords</div><button class="sort-button"></button>
+                    <div class="title">Keywords</div>
                     <div class="counter"><span>0</span> items</div>
+                    <div id="sort-items">
+                        <p id="sort-label">Sort by </p>
+                        <div id="sort-wrapper">
+                            <p id="sort-type">Date</p>
+                            <button class="sort-button"></button>
+                        </div>
+                    </div>
                 </div>
                 <form>
                     <input placeholder="Search">
@@ -181,6 +188,13 @@
                 <div class="head">
                     <div class="title">Narratives</div><button class="sort-button"></button>
                     <div class="counter"><span>0</span> items</div>
+                    <div id="sort-items">
+                        <p id="sort-label">Sort by </p>
+                        <div id="sort-wrapper">
+                            <p id="sort-type">Date</p>
+                            <button class="sort-button"></button>
+                        </div>
+                    </div>
                 </div>
                 <ul class="items-list">
                     <li>
@@ -291,6 +305,13 @@
                 <div class="head">
                     <div class="title">Posts</div><button class="sort-button"></button>
                     <div class="counter"><span>0</span> items</div>
+                    <div id="sort-items">
+                        <p id="sort-label">Sort by </p>
+                        <div id="sort-wrapper">
+                            <p id="sort-type">Date</p>
+                            <button class="sort-button"></button>
+                        </div>
+                    </div>
                 </div>
                 <ul class="items-list">
                     <li>
