--- a/index.html
+++ b/index.html
@@ -417,5 +417,15 @@
             </div>
         </div>
 
+
+
+        <!-- Submenu -->
+
+        <ul id="submenu">
+            <li class="submenuItem">Date</li>
+            <li class="submenuItem">Relevance</li>
+            <li class="submenuItem">Alphabetically</li>
+        </ul>
+
     </body>
 </html>
