Alignment Bug Fix 2

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     </head>
     <body>
 
+        <!-- Dummy Title Bar -->
+        <nav class="titlebar">
+        </nav>
+
+
         <!-- Narrative Tree -->
 
         <div id="narrative-tree">
